# python-kustomize

./: .coveragerc  .gitignore  .travis.yml  CHANGES.rst  LICENSE  README.md  README.rst  pytest.ini  setup.cfg  tox.ini
docs/: index.rst
kustomize/: converters.py  generators.py  main.py  templates.py
tests/: base.py  conftest.py  templates_fixtures.py  test_converters.py  test_generators.py  test_main.py  test_templates.py
tests/fixtures/attributes_as_dict/python/: configMap.py
tests/fixtures/attrs/python/: configMap.py
tests/fixtures/base_and_overlays/python/base/: configMap.py
tests/fixtures/base_and_overlays/python/overlays/production/: kustomization.py  replica_count.py
tests/fixtures/base_and_overlays/python/overlays/staging/: kustomization.py  special_labels.py
tests/fixtures/base_and_overlays/reference/overlays/production/: kustomization.yaml  replica_count.yaml
tests/fixtures/base_and_overlays/reference/overlays/staging/: kustomization.yaml  special_labels.yaml
tests/fixtures/dataclasses_/python/: configMap.py  kustomization.py
tests/fixtures/kubernetes/python/: configMap.py
tests/fixtures/kubernetes11/python/: configMap.py  deployment.py
tests/fixtures/kubernetes11/reference/: configMap.yaml
tests/fixtures/patchesJson6902/python/: add_init_container.py  kustomization.py
tests/fixtures/patchesJson6902/reference/: kustomization.yaml
tests/fixtures/patchesJson6902/reference/add_init_container/: add_init_container.yaml
tests/fixtures/simple_dict/python/: configMap.py  deployment.py  kustomization.py  service.py
tests/fixtures/simple_dict/reference/: kustomization.yaml
tests/fixtures/simple_dict_defaults/python/: deployment.py  kustomization.py  service.py
tests/fixtures/simple_dict_defaults/reference/: kustomization.yaml
tests/fixtures/simple_dict_subdirs/python/: kustomization.py
tests/fixtures/simple_dict_subdirs/reference/: kustomization.yaml
tests/fixtures/to_dict/python/: configMap.py
tests/fixtures/tuple_multiple/python/: configMap.py
tests/fixtures/tuple_multiple/reference/: configMap.yaml
tests/fixtures/tuple_multiple_attr/python/: configMap.py
