[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = kustomize
author = Diogo Baeder
author_email = diogo.baeder@yougov.com
description = Kustomize for Kubernetes, but in Python
long_description = file:README.rst
url = https://github.com/yougov/python-kustomize
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    dataclasses; python_version == "3.6"
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs >= 1.2.3
	pytest-flake8
	pytest-black-multipy
	pytest-cov
    dataclasses; python_version == "3.6"

	# local

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9
    dataclasses; python_version == "3.6"

	# local

[options.entry_points]
