[metadata]
name = kustomize
author = Diogo Baeder
author_email = diogo.baeder@yougov.com
description = Kustomize for Kubernetes, but in Python
long_description = file:README.rst
url = https://github.com/coherent-oss/python-kustomize
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest >= 6
	pytest-checkdocs >= 2.4
	pytest-black >= 0.3.7; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-cov
	pytest-mypy >= 0.9.1; \
		# workaround for jaraco/skeleton#22
		python_implementation != "PyPy"
	pytest-enabler >= 2.2
	pytest-ruff

	# local
	coverage
	PyYAML

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local
	PyYAML

[options.entry_points]
console_scripts =
	pykustomize=kustomize.main:main
