[metadata]
name = kustomize
author = Diogo Baeder
author_email = diogo.baeder@yougov.com
description = Kustomize for Kubernetes, but in Python
long_description = file:README.rst
url = https://github.com/coherent-oss/python-kustomize
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
include_package_data = true
python_requires = >=3.8
install_requires =

[options.extras_require]
testing =
	# upstream
	pytest >= 6, != 8.1.*
	pytest-checkdocs >= 2.4
	pytest-cov
	pytest-mypy
	pytest-enabler >= 2.2
	pytest-ruff >= 0.2.1

	# local
	coverage
	PyYAML

docs =
	# upstream
	sphinx >= 3.5
	jaraco.packaging >= 9.3
	rst.linker >= 1.9
	furo
	sphinx-lint

	# local
	PyYAML

[options.entry_points]
console_scripts =
	pykustomize=kustomize.main:main
